--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node src/server/server.ts",
-    "build": "rimraf dist & webpack --config webpack/webpack.config.js",
-    "build:watch": "npm run build -- --watch",
+    "start:prod": "cross-env NODE_ENV=production ts-node src/server/server.ts",
+    "build": "rimraf dist & webpack --config webpack/webpack.config.js -p",
     "test": "mocha --require ts-node/register \"src/**/*.test.ts\"",
     "test:watch": "npm run test -- --watch",
     "prettify": "prettier --write \"src/**/*\" \"webpack/**/*\""
@@ -32,7 +32,10 @@
     "@types/node": "^9.4.6",
     "@types/socket.io": "^1.4.31",
     "@types/webpack": "^3.8.8",
+    "@types/webpack-dev-middleware": "^2.0.0",
+    "@types/webpack-hot-middleware": "^2.16.2",
     "awesome-typescript-loader": "^3.4.1",
+    "cross-env": "^5.1.3",
     "html-webpack-plugin": "^2.30.1",
     "prettier": "^1.10.2",
     "rimraf": "^2.6.2",
@@ -42,6 +45,8 @@
     "typescript": "^2.7.2",
     "typestyle": "^1.7.1",
     "webpack": "^3.11.0",
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-hot-middleware": "^2.21.0",
     "webpack-split-by-path": "^2.0.0"
   }
 }
