--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "start": "ts-node src/server/server.ts",
     "start:prod": "cross-env NODE_ENV=production ts-node src/server/server.ts",
-    "build:client": "rimraf dist-client & webpack --config webpack/webpack.config.js -p",
-    "build:server": "rimraf dist-server & webpack --config webpack/webpack.server.js",
+    "build:client": "webpack --config webpack/webpack.config.js -p",
+    "build:server": "webpack --config webpack/webpack.server.js",
     "test": "mocha --require ts-node/register \"src/**/*.test.ts\"",
     "test:watch": "npm run test -- --watch",
     "prettify": "prettier --write \"src/**/*\" \"webpack/**/*\""
@@ -39,7 +39,6 @@
     "cross-env": "^5.1.3",
     "html-webpack-plugin": "^2.30.1",
     "prettier": "^1.10.2",
-    "rimraf": "^2.6.2",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.8.0",
