--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.6",
     "@types/socket.io": "^1.4.31",
+    "@types/socket.io-client": "^1.4.32",
     "@types/webpack": "^3.8.8",
     "@types/webpack-dev-middleware": "^2.0.0",
     "@types/webpack-hot-middleware": "^2.16.2",
@@ -39,6 +40,7 @@
     "cross-env": "^5.1.3",
     "html-webpack-plugin": "^2.30.1",
     "prettier": "^1.10.2",
+    "socket.io-client": "^2.0.4",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.8.0",
